--- a/influencer-gear-main/index.html
+++ b/influencer-gear-main/index.html
@@ -5,9 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secound Assignment</title>
+    <script src="https://kit.fontawesome.com/f2726f0935.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- navigation -->
+    <header class="container"  >
+        <nav  >
+       <div class="navigation-title">
+        <div class="text">
+            <h3>Influencer products</h3>
+        </div>
+        <ul class="nav-bar" >
+            <li><a href="">Home</a></li>
+            <li><a href="">Products</a></li>
+            <li><a href="">Sign up</a></li>
+            <li><a href="">Log In</a></li>
+            <li><a href=""><i class="fas fa-search"></i></a></li>
+            <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
+        </ul>
+        
+       </div>
+       <section class="container">
+           <div class="banner">
+               <div class="banner-left">
+                   <h1>Start your Journey as 
+
+                    Influencer</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+                        vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                        <button>Prebook Now <i class="fas fa-arrow-right"></i> </button>
+               </div>
+                <div class="banner-right">
+                  <img src="images/main-camera.png" alt="">
+                </div>
+           </div>
+       </section>
+        </nav>
+    </header>
+    <!-- links -->
+    <main class="container" >
+        <section class="link" >
+         <img src="logos/Alibaba.svg" alt="">         
+         <img src="logos/Amazon.svg" alt="">         
+         <img src="logos/Daraz.pk Logo.svg" alt="">         
+         <img src="logos/Ebay.svg" alt="">         
+         <img src="logos/Rakuten.svg" alt="">         
+         <img src="logos/Target.svg" alt="">         
+         <img src="logos/Walmart.svg" alt="">         
+        </section>
+    </main>
 </body>
 </html>
