--- a/influencer-gear-main/index.html
+++ b/influencer-gear-main/index.html
@@ -34,7 +34,7 @@
                     Influencer</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
                         vestibulum sed scelerisque eros. Lectus faucibus.</p>
-                        <button>Prebook Now <i class="fas fa-arrow-right"></i> </button>
+                        <button class="booking" >Prebook Now <i class="fas fa-arrow-right"></i> </button>
                </div>
                 <div class="banner-right">
                   <img src="images/main-camera.png" alt="">
@@ -54,6 +54,171 @@
          <img src="logos/Target.svg" alt="">         
          <img src="logos/Walmart.svg" alt="">         
         </section>
+        <!-- collection -->
+        <section class="container">
+            <div class="collection">
+                <h2 class="home" >Popular Collection</h2>
+            </div>
+           <div class="grand-parent">
+            <div class="parent">
+                <div class="picture">
+                 <img src="images/tripod.png" alt="">
+                </div>
+                <div class="information">
+                   <h2>Flex Tripod</h2>
+                   <h2>$50.48</h2>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star-half-alt"></i>
+                   <span>4.99</span>
+                   <p>Wordwide shifting
+                    available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="parent">
+                <div class="picture">
+                 <img src="images/mic.png" alt="">
+                </div>
+                <div class="information">
+                   <h2>Microphone</h2>
+                   <h2>$120.25</h2>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star-half-alt"></i>
+                   <span>4.99</span>
+                   <p>Wordwide shifting
+                    available Buyers protection possible!</p>
+                </div>
+            </div>
+          
+            <div class="parent">
+                <div class="picture">
+                 <img src="images/airpod.png" alt="">
+                </div>
+                <div class="information">
+                   <h2>Airbuds</h2>
+                   <h2>$100.00</h2>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star-half-alt"></i>
+                   <span>4.99</span>
+                   <p>Wordwide shifting
+                    available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="parent">
+                <div class="picture">
+                 <img src="images/drone.png" alt="">
+                </div>
+                <div class="information">
+                   <h2>Drone</h2>
+                   <h2>$980.25</h2>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star-half-alt"></i>
+                   <span>4.99</span>
+                   <p>Wordwide shifting
+                    available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="parent">
+                <div class="picture">
+                 <img src="images/lights.png" alt="">
+                </div>
+                <div class="information">
+                   <h2>Light Setup</h2>
+                   <h2>$1200.00</h2>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star-half-alt"></i>
+                   <span>4.99</span>
+                   <p>Wordwide shifting
+                    available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="parent">
+                <div class="picture">
+                 <img src="images/setup.png" alt="">
+                </div>
+                <div class="information">
+                   <h2>Photoshoot set</h2>
+                   <h2>$820.40</h2>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star-half-alt"></i>
+                   <span>4.99</span>
+                   <p>Wordwide shifting
+                    available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="parent">
+                <div class="picture">
+                 <img src="images/camera.png" alt="">
+                </div>
+                <div class="information">
+                   <h2>Vlogging Camera</h2>
+                   <h2>$1800.80</h2>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star-half-alt"></i>
+                   <span>4.99</span>
+                   <p>Wordwide shifting
+                    available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="parent">
+                <div class="picture">
+                 <img src="images/single-light.png" alt="">
+                </div>
+                <div class="information">
+                   <h2>Green Screen</h2>
+                   <h2>$25.48</h2>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star-half-alt"></i>
+                   <span>4.99</span>
+                   <p>Wordwide shifting
+                    available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="parent">
+                <div class="picture">
+                 <img src="images/action.png" alt="">
+                </div>
+                <div class="information">
+                   <h2>Action Camera</h2>
+                   <h2>$380.00</h2>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star-half-alt"></i>
+                   <span>4.99</span>
+                   <p>Wordwide shifting
+                    available Buyers protection possible!</p>
+                </div>
+            </div>
+            <button class="extra" >See More<i class="fas fa-arrow-right"></i></button>
+           </div>
+
+        </section>
     </main>
+
 </body>
 </html>
