--- a/influencer-gear-main/index.html
+++ b/influencer-gear-main/index.html
@@ -221,8 +221,8 @@
         <!-- bonas part -->
         <section class="container" >
           <div class="more">
-            <div class="picture">
-            <img class="gadget" src="mobile view/g.jpeg" alt="">
+            <div class="gadget">
+            <img  src="mobile view/g.jpeg" alt="">
             </div>
              <div class="info">
                  <h2 class="text-content" >Want more?</h2>
