--- a/influencer-gear-main/index.html
+++ b/influencer-gear-main/index.html
@@ -222,7 +222,7 @@
         <section class="container" >
           <div class="more">
             <div class="gadget">
-            <img  src="mobile view/g.jpeg" alt="">
+            <img  src="mobile view/gadget2.jpg" alt="">
             </div>
              <div class="info">
                  <h2 class="text-content" >Want more?</h2>
